--- a/KingfoodIO/wwwroot/html/reset_password.html
+++ b/KingfoodIO/wwwroot/html/reset_password.html
@@ -231,63 +231,30 @@
                                                 <td class="column column-1" width="100%"
                                                     style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
                                                     <table class="heading_block block-1" width="100%" border="0"
-                                                        cellpadding="10" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                                                           cellpadding="10" cellspacing="0" role="presentation"
+                                                           style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                         <tr>
                                                             <td class="pad">
-                                                                <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 28px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0; ">
-                                                                    <span
-                                                                        class="tinyMce-placeholder">Go to our website to reset your password</span> 
+                                                                <h1 style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 28px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0; ">
+                                                                    <span class="tinyMce-placeholder">Your verification code is:</span>
                                                             </td>
                                                         </tr>
                                                         <tr>
                                                             <td class="pad">
-                                                                <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 26px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">
-                                                                        <span
-                                                                        class="tinyMce-placeholder">点击设置新的密码:</span>
+                                                                <h1 style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 26px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">
+                                                                    <span class="tinyMce-placeholder">您的验证码为:</span>
+                                                                </h1>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="pad">
+                                                                <h1 style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 26px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">
+                                                                    <span class="tinyMce-placeholder">@Model.code</span>
                                                                 </h1>
                                                             </td>
                                                         </tr>
                                                     </table>
-                                                    <table class="button_block block-3" width="100%" border="0"
-                                                    cellpadding="10" cellspacing="0" role="presentation"
-                                                    style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                    <tr>
-                                                        <td class="pad">
-                                                            <div class="alignment" align="center">
-                                                                <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
-                                                            
-                                                                <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                                    <table class="button_block block-3" width="100%" border="0"
-                                                        cellpadding="10" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
-                                                            <td class="pad">
-                                                                <div class="alignment" align="center">
-                                                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
-                                                                    <div
-                                                                        style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc; border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
-                                                                     <a href="http://groupmeals.com/forgetpassword?email=@Model.Email&id=@Model.Id" style="color:white">   <span
-                                                                            style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
-                                                                                dir="ltr"
-                                                                                style="word-break: break-word; line-height: 32px;">Reset(重置密码)</span></span>
-                                                                            </a>
-                                                                    </div>
-                                                                    <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                                
                                 </td>
                             </tr>
                         </tbody>
