--- a/KingfoodIO/wwwroot/html/new_meals_support.html
+++ b/KingfoodIO/wwwroot/html/new_meals_support.html
@@ -134,7 +134,7 @@
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
 																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:50px;"><strong>You got a new order!</strong></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:40px;"><strong>您的顾客有新的订单! 请尽快与餐厅确认是否接收。</strong></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:40px;"><strong>平台有顾客新的订单! 请尽快与餐厅接收情况。</strong></span></p>
 																	</div>
 																</div>
 															</td>
@@ -193,7 +193,7 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:0px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 12px; mso-line-height-alt: 33px;"><span style="font-size:22px;">@Model.details.RestaurantName</span></p>
+																		<p style="margin: 0; font-size: 12px; mso-line-height-alt: 33px;"><span style="font-size:22px;">@Model.bookingDetail.RestaurantName</span></p>
 																	</div>
 																</div>
 															</td>
@@ -333,7 +333,7 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:0px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">@Model.details.SelectDateTime</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">@Model.bookingDetail.SelectDateTime</span></p>
 																	</div>
 																</div>
 															</td>
@@ -618,7 +618,7 @@
 																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:115px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#3fb9bc"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
 																	<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;">
-																			<a href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=1&sub=@Model.details.Id&e=@Model.details.SupporterEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">
+																			<a href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=1&sub=@Model.bookingDetail.Id&e=@Model.bookingDetail.SupporterEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">
 																				Accept
 																				接收
 																			</a>
@@ -639,7 +639,7 @@
 																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:118px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#bc3f3f"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
 																	<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#bc3f3f;border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
 																		<span style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;">
-																			<a href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=2&sub=@Model.details.Id&e=@Model.details.SupporterEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">
+																			<a href="https://order.groupmeals.com/AcceptOrder/@Model.booking.Id?opt=2&sub=@Model.bookingDetail.Id&e=@Model.bookingDetail.SupporterEmail" target="_blank" style="word-break: break-word; text-decoration:none;color:#fefefe; line-height: 32px;">
 																				Decline
 																				拒绝
 																			</a>
